Update article data

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,4 +1,4 @@
-<h1>Create article</h1>
+<h1>Edit article</h1>
 
 <form method="post">
     <label for="name">Name</label>
@@ -12,6 +12,9 @@
 
     <label for="body">Body</label>
     <textarea name="body" id="body" placeholder="Article body"></textarea>
+
+    <label for="author_id">author_id</label>
+    <input type="text" name="author_id" id="author_id" placeholder="Article author_id">
 
     <button>Publish</button>
 </form>
